--- a/app/globals.css
+++ b/app/globals.css
@@ -7,3 +7,13 @@ body,
 :root{
   height: 100%;
 }
+.title-slider {
+  padding: 0px 16px 25px;
+}
+.container-product-slider{
+      margin: auto;
+        margin-top: 2rem;
+        max-width: 1200px;
+        width: 90%;
+}
+
